--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                             <div class="details-container">
                                 <img src="./assets/experience.webp" alt="experience icon" class="experience-icon" />
                                 <h3>Experience</h3>
-                                <p>3rd Year<br /> CS Student</p>
+                                <p>3rd Year<br /> Computer Science Student</p>
                             </div>
                           </div>
                           <div class="card-back">
                             <div class="details-container">
                                 <h3>Highlights</h3>
                                 <p>
-                                    • PAL Leader for Math & CS(python)<br />
-                                    • Software Intern @ Embrays Technologies<br />
-                                    • Courses: DSA, AI Algorithms, Python, Java, OS
+                                    • PAL Leader for Math & Computer Science(python)<br />
+                                    • Software Intern @ Embrays Technologies (React , JS, HTML, CSS)<br />
+                                    • Skilled in development, communication, and collaboration
                                 </p>
                             </div>
                           </div>
@@ -115,9 +115,10 @@
                             <div class="details-container">
                                 <h3>Highlights</h3>
                                 <p>
-                                    • CS Major<br />
+                                    • Expected Graduation: 2027<br />
                                     • GPA: 3.92 (CS Avg: 92%)<br />
-                                    • $4000 Entrance Scholarship
+                                    • $4000 Entrance Scholarship <br />
+                                    • Relevant Courses: DSA, AI Algorithms, Python, Java, OS, Software Development
                                 </p>
                             </div>
                           </div>
@@ -132,9 +133,8 @@
                         computer science. I love the creative freedom CS gives; being able to build whatever you imagine 
                         is an amazing feeling. I’m always exploring new software and technologies, and I genuinely enjoy 
                         learning just for the fun of it. I’d love to make games in the future, and right now I’m learning 
-                        C++ while working on a few personal projects. I recently got 
-                        into reinforcement learning; I’m currently working on a project that uses it in a game setting. 
-                        I also love teaching what I learn. I work as a PAL leader for Calculus 3 and Introduction to Programming 
+                        C++ while working on a few personal projects.
+                        I also love teaching what I learn. I worked as a PAL leader for Calculus 2 and now for Introduction to Programming 
                         with Python, helping students and sharing my enthusiasm and passion with them. I interned at Embrays 
                         Technologies, where I worked with a professional tech team and saw how powerful great teamwork and 
                         passion can be. I learned a lot from that experience, and it made me excited to keep working in team 
@@ -242,11 +242,51 @@
                         <article class="tooltip">
                             <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
                             <div>
+                                <h3>React</h3>
+                                <p>Intermediate</p>
+                            </div>
+                            <div class="tooltip-content">
+                                I used React during my internship and projects like IntuitiveCS. I enjoy how modular and fast it is. I'm currently learning React hooks and building more interactive UIs with it.
+                            </div>
+                        </article>
+                        <article class="tooltip">
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
+                            <div>
+                                <h3>Selenium</h3>
+                                <p>Intermediate</p>
+                            </div>
+                            <div class="tooltip-content">
+                                I used Selenium in my Marketplace Negotiator project to automate Facebook Marketplace scraping. It helped me understand browser automation, dynamic page handling, and integrating APIs.
+                            </div>
+                        </article>
+                        <article class="tooltip">
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
+                            <div>
                                 <h3>VS Code</h3>
                                 <p>Advanced</p>
                             </div>
                             <div class="tooltip-content">
                                 My go-to editor since day one. I’ve tried others, but nothing beats VS Code with all my extensions and setup.
+                            </div>
+                        </article>
+                        <article class="tooltip">
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
+                            <div>
+                                <h3>Vite</h3>
+                                <p>Novice</p>
+                            </div>
+                            <div class="tooltip-content">
+                                I’ve used Vite to set up frontend projects quickly. It’s super fast and makes development with frameworks like React a lot smoother.
+                            </div>
+                        </article>
+                        <article class="tooltip">
+                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
+                            <div>
+                                <h3>NPM</h3>
+                                <p>Novice</p>
+                            </div>
+                            <div class="tooltip-content">
+                                I used NPM in my IntuitiveCS project to install React, React Flow, and other dependencies. I'm still learning more about scripts and package management.
                             </div>
                         </article>
                         <article class="tooltip">
@@ -269,16 +309,6 @@
                                 I use Notion to track deadlines, jot down ideas, and organize project plans. It’s basically my second brain during the semester.
                             </div>
                         </article>
-                        <article class="tooltip">
-                            <img src="./assets/checkmark.webp" alt="experience icon" class="icon"/>
-                            <div>
-                                <h3>Vite</h3>
-                                <p>Novice</p>
-                            </div>
-                            <div class="tooltip-content">
-                                I’ve used Vite to set up frontend projects quickly. It’s super fast and makes development with frameworks like React a lot smoother.
-                            </div>
-                        </article>
                         <!-- <article class="tooltip">
                             <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
                             <div>
@@ -289,16 +319,7 @@
                                 Container-based deployment and development environments. Experience with Docker Compose for multi-service apps.
                             </div>
                         </article> -->
-                        <!-- <article class="tooltip">
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
-                            <div>
-                                <h3>NPM</h3>
-                                <p>Novice</p>
-                            </div>
-                            <div class="tooltip-content">
-                                Container-based deployment and development environments. Experience with Docker Compose for multi-service apps.
-                            </div>
-                        </article> -->
+                        
                     </div>
                 </div>
             </div>
@@ -315,29 +336,33 @@
                     <div class="project-card-inner">
                         <div class="project-card-front">
                             <div class="article-container">
-                                <img src="./assets/project1.webp" alt="project 1" class="project-img"/>
+                                <img src="./assets/project4.webp" alt="project 4" class="project-img"/>
                             </div>
-                            <!-- <img src="./assets/IntuitiveCS.png" alt="CS" class="project-img"> -->
-                            <h2 class="experience-sub-title project-title">Intuitive CS</h2>
+                            <h2 class="experience-sub-title project-title">Marketplace Negotiator</h2>
                         </div>
                         <div class="project-card-back">
-                            <!-- <h3>Details</h3> -->
+                            <!-- <h3>Project One Details</h3> -->
                             <p>
-                                I co-developed this project with friends to help students see computer science concepts instead of just reading about them. 
-                                I used React and React Flow to create interactive visualizations. 
-                                It turns abstract CS topics into something you can actually play with.
+                                Built a tool that helps students craft housing inquiry messages using generative AI. 
+                                Combines Facebook Marketplace scraping with OpenAI's API for message generation.
                             </p>
+                            <div class="tech-stack">
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />Python</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/selenium/selenium-original.svg" alt="Selenium" />Selenium</span>
+                                <span class="badge"><img src="./assets/openai.svg" alt="OpenAI" />OpenAI API</span>
+                            </div>
                             <div class="btn-container">
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Intuitive-CS-Organisation/IntuitiveCS'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Marketplace-Negotiator-for-students'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://intuitivecs.ca'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Marketplace-Negotiator-for-students'">
                                     Live demo
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="details-container color-container project-card">
                     <div class="project-card-inner">
                         <div class="project-card-front">
@@ -349,10 +374,14 @@
                         <div class="project-card-back">
                             <!-- <h3>Project One Details</h3> -->
                             <p>
-                                This is my personal portfolio site where I showcase my projects and skills. 
-                                I Built it from scratch using HTML, CSS, and JavaScript, and deployed it with Git. 
-                                It's a clean, responsive design that reflects my journey and growth as a developer.
+                                Created a personal website to showcase projects, skills, and experience. Built from scratch 
+                                with responsive design and clean UI to reflect my development journey.
                             </p>
+                            <div class="tech-stack">
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML5" />HTML5</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS3" />CSS3</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />JavaScript</span>
+                            </div>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/PersonalPortfolio'">
                                     Github
@@ -364,21 +393,58 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="details-container color-container project-card">
                     <div class="project-card-inner">
                         <div class="project-card-front">
                             <div class="article-container">
-                                <img src="./assets/Project3.webp" alt="project 3" class="project-img"/>
+                                <img src="./assets/project1.webp" alt="project 1" class="project-img"/>
+                            </div>
+                            <!-- <img src="./assets/IntuitiveCS.png" alt="CS" class="project-img"> -->
+                            <h2 class="experience-sub-title project-title">Intuitive CS</h2>
+                        </div>
+                        <div class="project-card-back">
+                            <!-- <h3>Details</h3> -->
+                            <p>
+                                Co-developed an interactive platform to help students visualize and understand core computer science 
+                                concepts through engaging visual tools. Designed for beginners and visual learners.
+                            </p>
+                            <div class="tech-stack">
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML5" />HTML5</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS3" />CSS3</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />JavaScript</span>
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React" />React</span>
+                                <span class="badge"><img src="./assets/reactflow.svg" alt="React Flow" />React Flow</span>
+                            </div>
+                            <div class="btn-container">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Intuitive-CS-Organisation/IntuitiveCS'">
+                                    Github
+                                </button>
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://intuitivecs.ca'">
+                                    Live demo
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="details-container color-container project-card">
+                    <div class="project-card-inner">
+                        <div class="project-card-front">
+                            <div class="article-container">
+                                <img src="./assets/project3.webp" alt="project 3" class="project-img"/>
                             </div>
                             <h2 class="experience-sub-title project-title">Game of Four</h2>
                         </div>
                         <div class="project-card-back">
                             <!-- <h3>Project One Details</h3> -->
                             <p>
-                                I co-developed a block game as a group project for a university course. 
-                                We used Java to build the game logic and GUI, practicing teamwork, version control with Git, 
-                                and adhering to software development best practices. It was a great experience in collaborative coding and project management.
+                                Collaborated on a strategic grid-based game as a course project, where players place and rotate pieces under 
+                                rule constraints. Developed as a course project to practice OOP and team-based development.
                             </p>
+                            <div class="tech-stack">
+                                <span class="badge"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" />Java</span>
+                            </div>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Game-of-Four'">
                                     Github
