--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Marketplace-Negotiator-for-students'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Marketplace-Negotiator-for-students'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/6-_mjKKVqMs'">
                                     Live demo
                                 </button>
                             </div>
@@ -449,7 +449,7 @@
                                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Game-of-Four'">
                                     Github
                                 </button>
-                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/MahinSindhwani/Game-of-Four'">
+                                <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/x_Ur_ylPR_M'">
                                     Live demo
                                 </button>
                             </div>
